--- a/FutbolApp/FutbolApp.csproj
+++ b/FutbolApp/FutbolApp.csproj
@@ -82,4 +82,9 @@
       <LogicalName>TopTenPage.xaml</LogicalName>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Mono.Android">
+      <HintPath>..\..\..\..\..\Library\Frameworks\Mono.framework\External\xbuild-frameworks\MonoAndroid\v8.1\Mono.Android.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 </Project>
